tests/NormalTests/paczka2/big_fuzzy/11289766.err
Error in line 1: iaFk S34 30,8
Error in line 7: 53f A657 85,3
Error in line 8: Ez8D A657 63,1
Error in line 12: L6ucxnou S615 99,8
Error in line 32: S34 S34 76,4
Error in line 39: S34 S615 15,8
Error in line 46: iaFk A657 24,7
Error in line 54: Xg0C S615 253,4
Error in line 56: L6ucxnou S615 8,6
Error in line 40: S34 A657 86,8
Error in line 52: kTU A657 3,3
Error in line 69: S34 S615 108,9
Error in line 75: Ez8D S34 67,2
Error in line 83: Ez8D S615 78,0
Error in line 98: L6ucxnou A657 678,9
Error in line 97: 53f A657 22,1
Error in line 90: kTU A657 38,2
Error in line 100: L6ucxnou S615 97,6
Error in line 106: 53f S34 35,6
Error in line 104: kTU S419 76,5
Error in line 105: L6ucxnou S34 87,6
Error in line 109: kTU A657 50,2
Error in line 93: iaFk A657 279,9
Error in line 116: 53f S34 52,8
Error in line 151: 53f S34 13,6
Error in line 153: Ez8D A657 31,4
Error in line 168: S34 S34 52,0
Error in line 173: iaFk S419 100,50
Error in line 175: iaFk S419 164,0
Error in line 178: Ez8D S615 64,6
Error in line 191: S34 A657 342,2
Error in line 193: L6ucxnou S615 73,6
Error in line 201: Xg0C S34 -2,4
Error in line 197: kTU S34 37,8
Error in line 198: Xg0C S34 32,9
Error in line 218: S34 S34 ?2,5
Error in line 214: iaFk S34 59,4
Error in line 220: Xg0C A657 52,8
Error in line 224: L6ucxnou S615 35,0
Error in line 229: Ez8D S419 44,2
Error in line 236: kTU S615 67,+
Error in line 232: kTU A657 63,1
Error in line 228: L6ucxnou A657 10,0
Error in line 241: 53f S34 91,0
